# ashkit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.json  config.json  pyproject.toml
src/ashkit/: __init__.py  __main__.py  agent.py  config.py  database.py  gateway.py  mcp_client.py  memory.py  meta_agent.py  skills.py  tools.py  web.py
src/ashkit/channels/: __init__.py  feishu.py
src/ashkit/web/: index.html
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  AppContext.tsx  index.css
web/src/api/: client.ts
web/src/components/: Agents.tsx  Chat.tsx  Groups.tsx  Memory.tsx  Providers.tsx  Settings.tsx  Skills.tsx  Toast.tsx  Users.tsx
